# vertree

./: .gitignore  .metadata  404.html  AGENTS.md  CNAME  LICENSE  README.md  announcement.json  dev_server.py  pubspec.yaml  sitemap.xml
.github/: release-0.10.0-alpha1.md  release-0.10.0-alpha2.md  release-0.10.0-alpha3.md  release-0.10.0-alpha4.md  release-0.11.0-alpha1.md  release-0.11.0-alpha2.md  release-0.11.0-alpha3.md  release-0.11.0-alpha4.md  release-0.11.0-alpha5.md  release-0.11.0.md  release-0.11.1.md  release-0.11.2.md  release-0.11.3.md  release-0.12.0.md  release-0.13.0.md  release-0.13.1.md  release-0.14.0.md  release-0.8.0.md  release-0.8.1.md  release-0.9.0.md
.github/workflows/: release.yml  static.yml
.prompt/: i18n.md
assets/css/: styles.b68420cc.css
assets/js/: 0058b4c6.ea532758.js  01a85c17.615734b4.js  (+11 more)
blog/: atom.xml  index.html  rss.xml
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
file_share/: index.html
lib/: AppVersionInfo.dart  I18nLang.dart  MonitService.dart  VerTreeRegistryService.dart  app_runtime.dart  export.md  main.dart  tray.dart
linux/: CMakeLists.txt  build_linux_deb.sh  build_linux_release.sh  build_linux_rpm.sh
macos/: Podfile  build_macos_release.sh
markdown-page/: index.html
test/: widget_test.dart
tools/: dev_control_server.py  dev_run.py  generate_macos_icons.py  update_doc_images.py
windows/: CMakeLists.txt  build.ps1  build_msix.ps1  setup.iss
windows/context_menu/: CMakeLists.txt  resource.h  vertree_context_menu.cpp  vertree_context_menu.def  vertree_context_menu.rc
(+151 files in other folders)
